--- a/Case4.ipynb
+++ b/Case4.ipynb
@@ -281,7 +281,8 @@
     "                                                                        'Consumer complaint narrative', 'Company', 'State',\n",
     "                                                                       'ZIP code','Complaint ID'], engine='python')\n",
     "store = pd.HDFStore('data.h5')\n",
-    "store['data']= complains\n"
+    "store['data']= complains\n",
+    "\n"
    ]
   },
   {
@@ -292,6 +293,7 @@
    },
    "outputs": [],
    "source": [
+    "# Group by company\n",
     "import numpy as np\n",
     "import matplotlib.pylab as py\n",
     "%matplotlib inline\n",
