Ranked products by number of complaints

--- a/Case4_TODD.ipynb
+++ b/Case4_TODD.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -3561,13 +3561,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Product\n",
+      "Mortgage                                                                        242845\n",
+      "Debt collection                                                                 172747\n",
+      "Credit reporting                                                                140424\n",
+      "Credit card                                                                      89190\n",
+      "Bank account or service                                                          86207\n",
+      "Credit reporting, credit repair services, or other personal consumer reports     61788\n",
+      "Student loan                                                                     38852\n",
+      "Consumer Loan                                                                    31607\n",
+      "Credit card or prepaid card                                                      12482\n",
+      "Checking or savings account                                                      10369\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# CODE HERE TO LIST \"PRODUCT\" RANKED BY NUMBER OF COMPLAINTS"
+    "# CODE HERE TO LIST \"PRODUCT\" RANKED BY NUMBER OF COMPLAINTS\n",
+    "ratingCount = df_complaints.groupby('Product').size()\n",
+    "df_complaints_product_more_than_10k = ratingCount.index[ratingCount > 10000]\n",
+    "grouped = df_complaints.loc[df_complaints['Product'].isin(df_complaints_product_more_than_10k)].groupby('Product')\n",
+    "print(grouped.size().sort_values(ascending=False))"
    ]
   },
   {
@@ -3578,7 +3601,7 @@
    },
    "outputs": [],
    "source": [
-    "# CODE HERE TO LIST \"PRODUCT - SUB-PRODUCT\" RANKED BY NUMBER OF COMPLAINTS"
+    "# CODE HERE TO LIST \"PRODUCT - SUB-PRODUCT\" RANKED BY NUMBER OF COMPLAINTS\n"
    ]
   },
   {
