--- a/Team14_CaseStudy4_Notebook.ipynb
+++ b/Team14_CaseStudy4_Notebook.ipynb
@@ -562,13 +562,7 @@
     }
    ],
    "source": [
-    "# WE NEED SOME CODE HERE TO SHOW HOW WE SELECTED THE PARAMETERS FOR WEIGHTING... THE '0.8'  '0.1' AND '0.1'\n",
-    "# I assigned an 80% weighting to the measure of a companies complaint %\n",
-    "# I assigned a 10% weighting to the measure of a companies timely respone %\n",
-    "# I assigned a 10% weighting to the measure of a companies consumer disputed %\n",
-    "#\n",
-    "# randy said to show some code/math that shows why these parmeters were selected.\n",
-    "# he mentioned that PCA may help identify appropriate parameters\n",
+    "\n",
     "import matplotlib.pylab as py\n",
     "import numpy as np\n",
     "def formula(cp, trp, cdp):\n",
@@ -581,10 +575,6 @@
     "ratingCount = df_complaints.groupby('Company').size()\n",
     "df_complaints_more_than_10k = ratingCount.index[ratingCount > 10000]\n",
     "grouped = df_complaints.loc[df_complaints['Company'].isin(df_complaints_more_than_10k)].groupby('Company')\n",
-    "#help(table)\n",
-    "# l= []\n",
-    "# for i in range(table.size):\n",
-    "#     l.append(table.get_values())\n",
     "print(sum_company)"
    ]
   },
@@ -3030,10 +3020,7 @@
    ],
    "source": [
     "# QUICK EXPLORATION OF NATIVE CFPB COMPLAINT DATASET\n",
-    "#\n",
-    "# !!!!!! YOU ARE WELCOME TO USE BETTER/CLEANER CODE ANYWHERE !!!!!!\n",
-    "#\n",
-    "# what finanical products receive the most complaints?\n",
+    "# what finanical products receive the most complaints\n",
     "df_complaints.groupby('Product').size().plot(kind='bar')"
    ]
   },
@@ -3070,10 +3057,7 @@
    ],
    "source": [
     "# QUICK EXPLORATION OF THE CFPB COMPLAINT DATASET\n",
-    "#\n",
-    "# !!!!!! YOU ARE WELCOME TO USE BETTER/CLEANER CODE ANYWHERE !!!!!!\n",
-    "#\n",
-    "# What is the count of complaints for each company only if they have more than 10,000 complaints?\n",
+    "# What is the count of complaints for each company only if they have more than 10,000 complaints\n",
     "df_complaints_more_than_10k = df_complaints.groupby('Company').filter(lambda x: len(x) > 10000 )\n",
     "table = pd.pivot_table(df_complaints_more_than_10k,index=['Company'],values=['Complaint ID'],aggfunc={len})\n",
     "print(table)"
@@ -3303,7 +3287,6 @@
    "outputs": [],
    "source": [
     "# lets join the COMPLAINTS and CENSUS datasets\n",
-    "#\n",
     "df_complaints_and_census = pd.merge(left=df_complaints, right=df_census, how='left', on=['ZIP_first_three'])"
    ]
   },
